--- a/src/edurepo/resources/templates/resources/resource.html
+++ b/src/edurepo/resources/templates/resources/resource.html
@@ -4,13 +4,16 @@
     <h1>Web resource for {{ resource.objective }}</h1>
 
     <table class="table table-striped">
-        <tr><td><a href="{{ resource.url }}">{{ resource.url }}</a></td></tr>
-        <tr><td>Added at {{ resource.when_added }}</td></tr>
-        {% if resource.notes %}
-        <tr><td>Notes: {{ resource.notes }}</td></tr>
+        <tr><th>URL</th><td><a href="{{ resource.url }}">{{ resource.url }}</a></td></tr>
+        {% if verification and verification.document_title %}
+            <tr><th>Title</th><td>{{ verification.document_title }}</td></tr>
         {% endif %}
-        <tr><td>Votes in favor: {{ resource.votes }}</td></tr>
-        <tr><td>Flagged as inappropriate {{ resource.inappropriate_flags }} times</td></tr>
+        <tr><th>When added</th><td>{{ resource.when_added }}</td></tr>
+        {% if resource.notes %}
+        <tr><th>Notes</th><td>{{ resource.notes }}</td></tr>
+        {% endif %}
+        <tr><th>Up-votes</th><td>{{ resource.votes }}</td></tr>
+        <tr><th>Flagged</th><td>{{ resource.inappropriate_flags }} times</td></tr>
     </table>
 
     {% if comments %}
