add comment link on Django resource display view, changing resource comment form to require the resource id in the URL

--- a/src/edurepo/resources/templates/resources/comment.html
+++ b/src/edurepo/resources/templates/resources/comment.html
@@ -3,7 +3,7 @@
 {% block title %}Comment on a resource{% endblock %}
 {% block content %}
     <h1>Comment on a resource</h1>
-    <form action="{% url 'resources.views.comment_on_resource' %}" method="post">
+    <form action="{% url 'resources.views.comment_on_resource' resource_id=resource_id %}" method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
