--- a/src/edurepo/resources/templates/resources/resource.html
+++ b/src/edurepo/resources/templates/resources/resource.html
@@ -30,6 +30,13 @@
         {% endfor %}
     {% endif %}
 
+    <p><a class="btn btn-primary"
+          href="{% url 'resources.views.comment_on_resource' resource_id=resource.id %}">
+        Up-vote or flag
+        <span class="glyphicon glyphicon-ok"></span>
+        <span class="glyphicon glyphicon-remove"></span>
+        </a></p>
+
     <div class="text-warning">
         <p>Important: These pages are <q>reference views</q> for verifying data in the
         system; they are not intended for end users.</p>
