--- a/src/edurepo/teachers/templates/teachers/dashboard.html
+++ b/src/edurepo/teachers/templates/teachers/dashboard.html
@@ -8,7 +8,7 @@
 
     <div class="list-group" id="teacher-class-list">
     {% for c in teacher_class_list %}
-        <a href="#" class="list-group-item">
+        <a href="../{{ c.id }}/dashboard" class="list-group-item {{ c.active_class }}">
         <h4 class="list-group-item-heading">{{ c.name }}</h4>
         <p class="list-group-item-text">{{ c.course_id }}</p>
         </a>
@@ -29,14 +29,14 @@
         </div>
         </div>
     {% endif %}
-    {% if teacher_class_list %}
+    {% if selected_class %}
     <div class="col">
         <div class="col-md-8">
             <div class="row">
                 <div class="well">
-                    <p>Monday, {{ teacher_class_list.0.dates.M }}</p>
+                    <p>Monday, {{ selected_class.dates.M }}</p>
                     <ul>
-                        {% for obj in teacher_class_list.0.days.M %}
+                        {% for obj in selected_class.days.M %}
                         <li>{{ obj }}</li>
                         {% endfor %}
                     </ul>
@@ -44,9 +44,9 @@
             </div>
             <div class="row">
                 <div class="well">
-                    <p>Tuesday, {{ teacher_class_list.0.dates.T }}</p>
+                    <p>Tuesday, {{ selected_class.dates.T }}</p>
                     <ul>
-                        {% for obj in teacher_class_list.0.days.T %}
+                        {% for obj in selected_class.days.T %}
                         <li>{{ obj }}</li>
                         {% endfor %}
                     </ul>
@@ -54,9 +54,9 @@
             </div>
             <div class="row">
                 <div class="well">
-                    <p>Wednesday, {{ teacher_class_list.0.dates.W }}</p>
+                    <p>Wednesday, {{ selected_class.dates.W }}</p>
                     <ul>
-                        {% for obj in teacher_class_list.0.days.W %}
+                        {% for obj in selected_class.days.W %}
                         <li>{{ obj }}</li>
                         {% endfor %}
                     </ul>
@@ -64,9 +64,9 @@
             </div>
             <div class="row">
                 <div class="well">
-                    <p>Thursday, {{ teacher_class_list.0.dates.R }}</p>
+                    <p>Thursday, {{ selected_class.dates.R }}</p>
                     <ul>
-                        {% for obj in teacher_class_list.0.days.R %}
+                        {% for obj in selected_class.days.R %}
                         <li>{{ obj }}</li>
                         {% endfor %}
                     </ul>
@@ -74,9 +74,9 @@
             </div>
             <div class="row">
                 <div class="well">
-                    <p>Friday, {{ teacher_class_list.0.dates.F }}</p>
+                    <p>Friday, {{ selected_class.dates.F }}</p>
                     <ul>
-                        {% for obj in teacher_class_list.0.days.F %}
+                        {% for obj in selected_class.days.F %}
                         <li>{{ obj }}</li>
                         {% endfor %}
                     </ul>
@@ -86,9 +86,4 @@
     </div>
     {% endif %}
 
-    <script type="text/javascript">
-        window.onload = function() {
-            $("#teacher-class-list a:first-child").addClass("active");
-        };
-    </script>
 {% endblock %}
