fix typo that resulted in adding objects to Monday when Friday was requested

--- a/src/edurepo/teachers/templates/teachers/dashboard.html
+++ b/src/edurepo/teachers/templates/teachers/dashboard.html
@@ -101,7 +101,7 @@
                         <li>{{ obj }}</li>
                         {% endfor %}
                     </ul>
-                    <a href="{{ selected_class.dates.M }}/add_objective"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                    <a href="{{ selected_class.dates.F }}/add_objective"><span class="glyphicon glyphicon-plus-sign"></span></a>
                     {% if selected_class.days.F %}
                     <a href="{{ selected_class.dates.F }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
                     {% endif %}
