dashboard link to remove objective from calendar is next to a specific objective

--- a/src/edurepo/teachers/templates/teachers/dashboard.html
+++ b/src/edurepo/teachers/templates/teachers/dashboard.html
@@ -42,13 +42,12 @@
                     <p>{{ day_names.M }}, {{ selected_class.dates.M }}</p>
                     <ul class="list-unstyled">
                         {% for obj in selected_class.days.M %}
-                        <li>{{ obj }}</li>
+                        <li>{{ obj }}
+                        <a href="{{ selected_class.dates.M }}/{{ obj.objective }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
+                        </li>
                         {% endfor %}
                     </ul>
                     <a href="{{ selected_class.dates.M }}/add_objective"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                    {% if selected_class.days.M %}
-                    <a href="{{ selected_class.dates.M }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
-                    {% endif %}
                 </div>
             </div>
             <div class="row">
@@ -56,13 +55,12 @@
                     <p>{{ day_names.T }}, {{ selected_class.dates.T }}</p>
                     <ul class="list-unstyled">
                         {% for obj in selected_class.days.T %}
-                        <li>{{ obj }}</li>
+                        <li>{{ obj }}
+                        <a href="{{ selected_class.dates.T }}/{{ obj.objective }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
+                        </li>
                         {% endfor %}
                     </ul>
                     <a href="{{ selected_class.dates.T }}/add_objective"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                    {% if selected_class.days.T %}
-                    <a href="{{ selected_class.dates.T }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
-                    {% endif %}
                 </div>
             </div>
             <div class="row">
@@ -70,13 +68,12 @@
                     <p>{{ day_names.W }}, {{ selected_class.dates.W }}</p>
                     <ul class="list-unstyled">
                         {% for obj in selected_class.days.W %}
-                        <li>{{ obj }}</li>
+                        <li>{{ obj }}
+                        <a href="{{ selected_class.dates.W }}/{{ obj.objective }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
+                        </li>
                         {% endfor %}
                     </ul>
                     <a href="{{ selected_class.dates.W }}/add_objective"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                    {% if selected_class.days.W %}
-                    <a href="{{ selected_class.dates.W }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
-                    {% endif %}
                 </div>
             </div>
             <div class="row">
@@ -84,13 +81,12 @@
                     <p>{{ day_names.R }}, {{ selected_class.dates.R }}</p>
                     <ul class="list-unstyled">
                         {% for obj in selected_class.days.R %}
-                        <li>{{ obj }}</li>
+                        <li>{{ obj }}
+                        <a href="{{ selected_class.dates.R }}/{{ obj.objective }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
+                        </li>
                         {% endfor %}
                     </ul>
                     <a href="{{ selected_class.dates.R }}/add_objective"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                    {% if selected_class.days.R %}
-                    <a href="{{ selected_class.dates.R }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
-                    {% endif %}
                 </div>
             </div>
             <div class="row">
@@ -98,13 +94,12 @@
                     <p>{{ day_names.F }}, {{ selected_class.dates.F }}</p>
                     <ul class="list-unstyled">
                         {% for obj in selected_class.days.F %}
-                        <li>{{ obj }}</li>
+                        <li>{{ obj }}
+                        <a href="{{ selected_class.dates.F }}/{{ obj.objective }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
+                        </li>
                         {% endfor %}
                     </ul>
                     <a href="{{ selected_class.dates.F }}/add_objective"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                    {% if selected_class.days.F %}
-                    <a href="{{ selected_class.dates.F }}/remove_objective"><span class="glyphicon glyphicon-minus-sign"></span></a>
-                    {% endif %}
                 </div>
             </div>
         </div>
