--- a/src/edurepo/teachers/templates/teachers/classes.html
+++ b/src/edurepo/teachers/templates/teachers/classes.html
@@ -2,14 +2,14 @@
 {% block title %}{{ teacher.name }}'s Classes{% endblock %}
 {% block content %}
 {% if teacher_class_list %}
-    <p>Classes for {{ teacher }}:</p>
+    <p>Classes for {{ teacher.name }}:</p>
     <ul>
 {% for c in teacher_class_list %}
         <li><a href="{{ c.name }}/">{{ c.name }}</a></li>
 {% endfor %}
     </ul>
 {% else %}
-    <p>No classes defined for {{ teacher}}!</p>
+    <p>No classes defined for {{ teacher.name }}!</p>
 {% endif %}
 
     <div class="text-warning">
