--- a/src/edurepo/teachers/templates/teachers/index.html
+++ b/src/edurepo/teachers/templates/teachers/index.html
@@ -5,7 +5,7 @@
     <h1>List of teachers</h1>
     <ul>
     {% for t in teacher_list %}
-        <li><a href="{{ t.email }}/">{{ t.name }} ({{ t.email }})</a></li>
+        <li><a href="{{ t.email }}/">{{ t.name }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
