--- a/src/edurepo/templates/base.html
+++ b/src/edurepo/templates/base.html
@@ -30,7 +30,7 @@
                     {% if not user.is_authenticated %}
                     <li><a href="{% url 'social:begin' 'google' %}?next={% url 'top.index' %}">Login with a Google account</a></li>
                     {% endif %}
-                    {% if user %}
+                    {% if user.is_authenticated %}
                     {% if backends.associated %}
                     {% for assoc in backends.associated %}
                     <li><a href="{% url 'logout' %}?next={% url 'top.index' %}">Logout <strong>{{ user.username}}</strong> via <strong>{{ assoc.provider }}</strong></a></li>
