--- a/src/edurepo/templates/base.html
+++ b/src/edurepo/templates/base.html
@@ -31,6 +31,17 @@
                     <li><a href="{% url 'social:begin' 'google' %}?next={% url 'top.index' %}">Login with a Google account</a></li>
                     {% endif %}
                     {% if user.is_authenticated %}
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Setup <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'teachers.views.register_teacher' %}">Register as teacher</a></li>
+                            {% for de in dashboard_emails %}
+                                <li><a href="{% url 'teachers.views.add_class' teacher_email=de %}">Add class ({{ de }})</a></li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+
                     {% if backends.associated %}
                     {% for assoc in backends.associated %}
                     <li><a href="{% url 'logout' %}?next={% url 'top.index' %}">Logout <strong>{{ user.username}}</strong> via <strong>{{ assoc.provider }}</strong></a></li>
