remind teacher of the student-visible e-mail for a class

--- a/src/edurepo/teachers/templates/teachers/dashboard.html
+++ b/src/edurepo/teachers/templates/teachers/dashboard.html
@@ -5,6 +5,7 @@
     <div class="col-md-4">
     <div class="well">
     <h3>Dashboard for {{ teacher.name }}</h3>
+    <p class="small">({{ teacher.email }})</p>
 
     <div class="list-group" id="teacher-class-list">
     {% for c in teacher_class_list %}
